[devtools] Use ZGC and target a 128M heap limit